--- a/process_TESS_data/process_sector_097.ipynb
+++ b/process_TESS_data/process_sector_097.ipynb
@@ -12,8 +12,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-12-11T13:36:54.139742Z",
-     "start_time": "2025-12-11T13:36:52.199768Z"
+     "end_time": "2025-12-12T07:47:28.428440900Z",
+     "start_time": "2025-12-12T07:47:25.430182400Z"
     }
    },
    "source": [
@@ -35,8 +35,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-11T13:39:03.162771Z",
-     "start_time": "2025-12-11T13:39:03.052592Z"
+     "end_time": "2025-12-12T07:47:31.066765900Z",
+     "start_time": "2025-12-12T07:47:30.858973300Z"
     }
    },
    "cell_type": "code",
@@ -67,13 +67,13 @@
      }
     }
    ],
-   "execution_count": 10
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-11T13:39:04.091273Z",
-     "start_time": "2025-12-11T13:39:04.005759Z"
+     "end_time": "2025-12-12T07:47:32.503615100Z",
+     "start_time": "2025-12-12T07:47:32.360568900Z"
     }
    },
    "cell_type": "code",
@@ -99,13 +99,13 @@
      }
     }
    ],
-   "execution_count": 11
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-11T13:39:04.857440Z",
-     "start_time": "2025-12-11T13:39:04.782994Z"
+     "end_time": "2025-12-12T07:47:38.161866100Z",
+     "start_time": "2025-12-12T07:47:38.025146300Z"
     }
    },
    "cell_type": "code",
@@ -129,13 +129,13 @@
      }
     }
    ],
-   "execution_count": 12
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-11T13:39:05.643854Z",
-     "start_time": "2025-12-11T13:39:05.576416Z"
+     "end_time": "2025-12-12T07:47:43.289101900Z",
+     "start_time": "2025-12-12T07:47:43.163119800Z"
     }
    },
    "cell_type": "code",
@@ -159,13 +159,13 @@
      }
     }
    ],
-   "execution_count": 13
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-11T13:39:06.867355Z",
-     "start_time": "2025-12-11T13:39:06.799903Z"
+     "end_time": "2025-12-12T07:47:44.531567200Z",
+     "start_time": "2025-12-12T07:47:44.356141Z"
     }
    },
    "cell_type": "code",
@@ -189,13 +189,13 @@
      }
     }
    ],
-   "execution_count": 14
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-05T19:33:15.917741Z",
-     "start_time": "2025-09-05T19:33:15.859727Z"
+     "end_time": "2025-12-12T07:47:45.382744400Z",
+     "start_time": "2025-12-12T07:47:45.291732600Z"
     }
    },
    "cell_type": "code",
@@ -205,13 +205,13 @@
    ],
    "id": "4c0c90ad3633e10d",
    "outputs": [],
-   "execution_count": 22
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-05T19:33:28.078232Z",
-     "start_time": "2025-09-05T19:33:28.075107Z"
+     "end_time": "2025-12-12T07:47:49.289048800Z",
+     "start_time": "2025-12-12T07:47:49.220283800Z"
     }
    },
    "cell_type": "code",
@@ -224,18 +224,18 @@
        "'../data/TOI-4504/95_SPOC_120_p.csv'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 23
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-05T19:31:56.752349Z",
-     "start_time": "2025-09-05T19:31:56.742679Z"
+     "end_time": "2025-12-12T07:47:51.187235900Z",
+     "start_time": "2025-12-12T07:47:51.118027300Z"
     }
    },
    "cell_type": "code",
@@ -246,19 +246,19 @@
      "data": {
       "text/plain": [
        "               time      flux  flux_err\n",
-       "0      2.460883e+06  1.005446  0.005187\n",
-       "1      2.460883e+06  0.993426  0.005175\n",
-       "2      2.460883e+06  0.993544  0.005174\n",
-       "3      2.460883e+06  0.999723  0.005170\n",
-       "4      2.460883e+06  0.999815  0.005167\n",
+       "0      2.460934e+06       NaN       NaN\n",
+       "1      2.460934e+06       NaN       NaN\n",
+       "2      2.460934e+06       NaN       NaN\n",
+       "3      2.460934e+06       NaN       NaN\n",
+       "4      2.460934e+06       NaN       NaN\n",
        "...             ...       ...       ...\n",
-       "16381  2.460907e+06  0.998163  0.005096\n",
-       "16382  2.460907e+06  1.001450  0.005106\n",
-       "16383  2.460907e+06  1.001472  0.005101\n",
-       "16384  2.460907e+06  0.990134  0.005099\n",
-       "16385  2.460907e+06  0.995707  0.005112\n",
+       "37886  2.460988e+06  1.002386  0.004845\n",
+       "37887  2.460988e+06  0.998648  0.004842\n",
+       "37888  2.460988e+06  0.996226  0.004841\n",
+       "37889  2.460988e+06  1.002265  0.004850\n",
+       "37890  2.460988e+06  0.997518  0.004852\n",
        "\n",
-       "[16386 rows x 3 columns]"
+       "[37891 rows x 3 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -287,33 +287,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2.460883e+06</td>\n",
-       "      <td>1.005446</td>\n",
-       "      <td>0.005187</td>\n",
+       "      <td>2.460934e+06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2.460883e+06</td>\n",
-       "      <td>0.993426</td>\n",
-       "      <td>0.005175</td>\n",
+       "      <td>2.460934e+06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2.460883e+06</td>\n",
-       "      <td>0.993544</td>\n",
-       "      <td>0.005174</td>\n",
+       "      <td>2.460934e+06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2.460883e+06</td>\n",
-       "      <td>0.999723</td>\n",
-       "      <td>0.005170</td>\n",
+       "      <td>2.460934e+06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2.460883e+06</td>\n",
-       "      <td>0.999815</td>\n",
-       "      <td>0.005167</td>\n",
+       "      <td>2.460934e+06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -322,47 +322,47 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16381</th>\n",
-       "      <td>2.460907e+06</td>\n",
-       "      <td>0.998163</td>\n",
-       "      <td>0.005096</td>\n",
+       "      <th>37886</th>\n",
+       "      <td>2.460988e+06</td>\n",
+       "      <td>1.002386</td>\n",
+       "      <td>0.004845</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16382</th>\n",
-       "      <td>2.460907e+06</td>\n",
-       "      <td>1.001450</td>\n",
-       "      <td>0.005106</td>\n",
+       "      <th>37887</th>\n",
+       "      <td>2.460988e+06</td>\n",
+       "      <td>0.998648</td>\n",
+       "      <td>0.004842</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16383</th>\n",
-       "      <td>2.460907e+06</td>\n",
-       "      <td>1.001472</td>\n",
-       "      <td>0.005101</td>\n",
+       "      <th>37888</th>\n",
+       "      <td>2.460988e+06</td>\n",
+       "      <td>0.996226</td>\n",
+       "      <td>0.004841</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16384</th>\n",
-       "      <td>2.460907e+06</td>\n",
-       "      <td>0.990134</td>\n",
-       "      <td>0.005099</td>\n",
+       "      <th>37889</th>\n",
+       "      <td>2.460988e+06</td>\n",
+       "      <td>1.002265</td>\n",
+       "      <td>0.004850</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16385</th>\n",
-       "      <td>2.460907e+06</td>\n",
-       "      <td>0.995707</td>\n",
-       "      <td>0.005112</td>\n",
+       "      <th>37890</th>\n",
+       "      <td>2.460988e+06</td>\n",
+       "      <td>0.997518</td>\n",
+       "      <td>0.004852</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>16386 rows × 3 columns</p>\n",
+       "<p>37891 rows × 3 columns</p>\n",
        "</div>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 19
+   "execution_count": 9
   },
   {
    "metadata": {},
